# loud.cpp

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
CMake/: Json.cmake  Sherpa.cmake  whisper.cmake
cmake/: cli11.cmake  curl.cmake  fmt.cmake  sherpa-static.cmake  sherpa.cmake  spdlog.cmake  static-ffmpeg.cmake  subprocess.cmake  termcolor.cmake  whisper.cmake
docs/: BUILDING.md  building.md
include/: config.h  diarization.h  download.h  ffmpeg.h  main.h  segments.h  spinner.h  transcribe.h  utils.h
src/: config.cpp  diarization.cpp  download.cpp  ffmpeg.cpp  main.cpp  main.h  segments.cpp  spinner.cpp  transcribe.cpp  utils.cpp
